--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
   </head>
   <body id="BODY">
         <p id="test"></p>
-      <input type="range" min="0" max="360" id="hue">
-        <p id="hue-value"></p>
-      <input type="range" min="0" max="100" id="saturation">
-        <p id="sat-value"></p>
-      <input type="range" min="0" max="100" id="lightness">
-        <p id="light-value"></p>
-      <button onclick="huedisplay();">update</button>
+      <input type="range" min="0" max="360" id="hue" oninput="huedisplay();">
+
+      <input type="range" min="0" max="100" id="saturation" oninput="huedisplay();">
+
+      <input type="range" min="0" max="100" id="lightness" oninput="huedisplay();">
+
     <script src="colourchange.js">
     </script>
   </body>
